fix:  movingto src

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "dices-bot-ts",
   "version": "1.0.0",
   "description": "Typescript discord bot",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index.ts"
+    "start": "ts-node ./src/index.ts"
   },
   "repository": {
     "type": "git",
